Docker, nginx ssl, README jak uruchomić